tests/baselines/reference/structAccessibilityModifiers.errors.txt
tests/cases/conformance/structs/structPropertyMemberDeclarations/structAccessibilityModifiers.ts(14,12): error TS1029: 'private' modifier must precede 'static' modifier.
tests/cases/conformance/structs/structPropertyMemberDeclarations/structAccessibilityModifiers.ts(15,12): error TS1029: 'private' modifier must precede 'static' modifier.
tests/cases/conformance/structs/structPropertyMemberDeclarations/structAccessibilityModifiers.ts(17,12): error TS1029: 'public' modifier must precede 'static' modifier.
tests/cases/conformance/structs/structPropertyMemberDeclarations/structAccessibilityModifiers.ts(18,12): error TS1029: 'public' modifier must precede 'static' modifier.
tests/cases/conformance/structs/structPropertyMemberDeclarations/structAccessibilityModifiers.ts(23,13): error TS1028: Accessibility modifier already seen.
tests/cases/conformance/structs/structPropertyMemberDeclarations/structAccessibilityModifiers.ts(24,12): error TS1028: Accessibility modifier already seen.


==== tests/cases/conformance/structs/structPropertyMemberDeclarations/structAccessibilityModifiers.ts (6 errors) ====
    // doc 4
    
    // No errors
    struct C {
        private static privateProperty;
        private static privateMethod() { }
    
        public static publicProperty;
        public static publicMethod() { }
    }
    
    // Errors, accessibility modifiers must precede static
    struct D {
        static private privateProperty;
               ~~~~~~~
!!! error TS1029: 'private' modifier must precede 'static' modifier.
        static private privateMethod() { }
               ~~~~~~~
!!! error TS1029: 'private' modifier must precede 'static' modifier.
    
        static public publicProperty;
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
        static public publicMethod() { }
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
    }
    
    // Errors, multiple accessibility modifier
    struct E {
        private public property;
                ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
        public private method() { }
               ~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }
    